--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portofolio</title>
     <link href="dist/output.css" rel="stylesheet">
+    <link rel="shortcut icon" href="dist/img/profile.jpeg">
 </head>
 <body>
     
