--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
        </div>
 
        <div class="w-full px-4 flex flex-wrap justify-center xl:w-10/12 xl:mx-auto">
-        <div class="mb-12 p-4 md:w-1/2" id="onime">
+        <div class="mb-12 p-4 sm:w-1/2" id="onime">
             <div class="rounded-md shadow-md overflow-hidden relative">
                 <a target="_blank" href="https://github.com/RizkySix/onime"><img src="dist/img/portofolio/onime1.png" alt="" width="w-full" class="h-full transition-transform transform hover:scale-105 filter "></a>
             </div>
