--- a/index.html
+++ b/index.html
@@ -167,9 +167,9 @@
        </div>
 
        <div class="w-full px-4 flex flex-wrap justify-center xl:w-10/12 xl:mx-auto">
-        <div class="mb-12 p-4 sm:w-1/2" id="onime">
+        <div class="mb-12 p-4 md:w-1/2" id="onime">
             <div class="rounded-md shadow-md overflow-hidden relative">
-                <a target="_blank" href="https://github.com/RizkySix/onime"><img src="dist/img/portofolio/onime1.png" alt="" width="w-full" class="h-full transition-transform transform hover:scale-105 filter "></a>
+                <a target="_blank" href="https://github.com/RizkySix/onime"><img src="dist/img/portofolio/onime1.png" alt="" width="w-full" class="transition-transform transform hover:scale-105 filter "></a>
             </div>
             <h3 class="font-semibold text-xl text-dark mt-5 mb-3" >Onime (Public API Service)</h3>
             <p class="font-medium text-base text-secondary">Layanan API yang menyediakan data anime dengan token Otentikasi. Respon yang diberikan dari layanan ini seperti judul anime, total episode, pengarang, tanggal rilis, deskripsi, rating, genre, dan lain-lain. Seperti API publik pada umumnya, layanan ini juga memiliki dokumentasi berbasis situs web. Pengguna juga dapat berlangganan VIP dengan mengunjungi website untuk mendapatkan token VIP.</p>
@@ -179,7 +179,7 @@
         </div>
         <div class="mb-12 p-4 md:w-1/2" id="shalltear">
             <div class="rounded-md shadow-md overflow-hidden">
-                <a target="_blank" href="https://github.com/RizkySix/shalltears"> <img src="dist/img/portofolio/shalltear1.png" alt="" width="w-full" class="h-full transition-transform transform hover:scale-105 filter "></a>
+                <a target="_blank" href="https://github.com/RizkySix/shalltears"> <img src="dist/img/portofolio/shalltear1.png" alt="" width="w-full" class="transition-transform transform hover:scale-105 filter "></a>
                
             </div>
             <h3 class="font-semibold text-xl text-dark mt-5 mb-3" >Shalltears Clothing Store</h3>
@@ -190,7 +190,7 @@
         </div>
         <div class="mb-12 p-4 md:w-1/2" id="shoesclean">
             <div class="rounded-md shadow-md overflow-hidden">
-                <a target="_blank" href="https://github.com/RizkySix/shoes-clean"><img src="dist/img/portofolio/shoesclean1.png" alt="" width="w-full" class="h-full transition-transform transform hover:scale-105 filter "></a>
+                <a target="_blank" href="https://github.com/RizkySix/shoes-clean"><img src="dist/img/portofolio/shoesclean1.png" alt="" width="w-full" class="transition-transform transform hover:scale-105 filter "></a>
             </div>
             <h3 class="font-semibold text-xl text-dark mt-5 mb-3" >Shoes Clean</h3>
             <p class="font-medium text-base text-secondary">Situs web yang ditujukan untuk pemilik bisnis Laundry Sepatu, sehingga mereka dapat mendaftarkan bisnis mereka. Proses pemesanan menggunakan sistem booking dengan pembayaran langsung pada saat sepatu diserahkan ke toko, sehingga customer tidak perlu bingung untuk memesan.</p>
@@ -200,7 +200,7 @@
         </div>
         <div class="mb-12 p-4 md:w-1/2" id="bumdes">
             <div class="rounded-md shadow-md overflow-hidden">
-                <a target="_blank" href="https://github.com/RizkySix/aplikasi-bumdes">  <img src="dist/img/portofolio/bumdes1.png" alt="" width="w-full" class="h-full transition-transform transform hover:scale-105 filter "></a>
+                <a target="_blank" href="https://github.com/RizkySix/aplikasi-bumdes">  <img src="dist/img/portofolio/bumdes1.png" alt="" width="w-full" class="transition-transform transform hover:scale-105 filter "></a>
             </div>
             <h3 class="font-semibold text-xl text-dark mt-5 mb-3" >Aplikasi Bumdes (SAD MERTHA NADI)</h3>
             <p class="font-medium text-base text-secondary">Aplikasi yang digunakan untuk mengelola dan menginput data pembelian, penjualan dan laporan barang pada Bumdes Sad Mertha Nadi.</p>
