--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
         </div>
         <div class="mb-12 p-4 md:w-1/2" id="shoesclean">
             <div class="rounded-md shadow-md overflow-hidden">
-                <a target="_blank" href="https://github.com/RizkySix/shoes-clean"><img src="dist/img/portofolio/shoesclean1.png" alt="" width="w-full" class="transition-transform transform hover:scale-105 filter "></a>
+                <img src="dist/img/portofolio/shoesclean1.png" alt="" width="w-full" class="transition-transform transform hover:scale-105 filter ">
             </div>
             <h3 class="font-semibold text-xl text-dark mt-5 mb-3" >Shoes Clean</h3>
             <p class="font-medium text-base text-secondary">Situs web yang ditujukan untuk pemilik bisnis Laundry Sepatu, sehingga mereka dapat mendaftarkan bisnis mereka. Proses pemesanan menggunakan sistem booking dengan pembayaran langsung pada saat sepatu diserahkan ke toko, sehingga customer tidak perlu bingung untuk memesan.</p>
