--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
             <h3 class="font-semibold text-xl text-dark mt-5 mb-3" >Shoes Clean</h3>
             <p class="font-medium text-base text-secondary">Situs web yang ditujukan untuk pemilik bisnis Laundry Sepatu, sehingga mereka dapat mendaftarkan bisnis mereka. Proses pemesanan menggunakan sistem booking dengan pembayaran langsung pada saat sepatu diserahkan ke toko, sehingga customer tidak perlu bingung untuk memesan.</p>
 
-            <h4 class="font-semibold text-1xl text-dark mt-5 mb-3">Teknologi : <span class="font-medium text-base text-secondary">Laravel, PHP, MySQL, JQuery, Bootstrap, Snap-Midtrans</span></h4>
+            <h4 class="font-semibold text-1xl text-dark mt-5 mb-3">Teknologi : <span class="font-medium text-base text-secondary">Laravel, PHP, MySQL, JQuery, Bootstrap</span></h4>
 
         </div>
         <div class="mb-12 p-4 md:w-1/2" id="bumdes">
@@ -205,7 +205,7 @@
             <h3 class="font-semibold text-xl text-dark mt-5 mb-3" >Aplikasi Bumdes (SAD MERTHA NADI)</h3>
             <p class="font-medium text-base text-secondary">Aplikasi yang digunakan untuk mengelola dan menginput data pembelian, penjualan dan laporan barang pada Bumdes Sad Mertha Nadi.</p>
 
-            <h4 class="font-semibold text-1xl text-dark mt-5 mb-3">Teknologi : <span class="font-medium text-base text-secondary">Laravel, PHP, MySQL, JQuery, Bootstrap, Snap-Midtrans</span></h4>
+            <h4 class="font-semibold text-1xl text-dark mt-5 mb-3">Teknologi : <span class="font-medium text-base text-secondary">Laravel, PHP, MySQL, JQuery, Bootstrap</span></h4>
 
         </div>
        </div>
