--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                 <a target="_blank" href="https://github.com/RizkySix/onime"><img src="dist/img/portofolio/onime1.png" alt="" width="w-full" class="transition-transform transform hover:scale-105 filter "></a>
             </div>
             <h3 class="font-semibold text-xl text-dark mt-5 mb-3" >Onime (Public API Service)</h3>
-            <p class="font-medium text-base text-secondary">Layanan API yang menyediakan data anime dengan token Otentikasi. Respon yang diberikan dari layanan ini seperti judul anime, total episode, pengarang, tanggal rilis, deskripsi, rating, genre, dan lain-lain. Seperti API publik pada umumnya, layanan ini juga memiliki dokumentasi berbasis situs web. Pengguna juga dapat berlangganan VIP dengan mengunjungi website untuk mendapatkan token VIP.</p>
+            <p class="font-medium text-base text-secondary">Layanan API yang menyediakan data anime dengan token Otentikasi. Respon yang diberikan dari layanan ini seperti judul anime, total episode, pengarang, tanggal rilis, deskripsi, rating, genre, dan lain-lain. Seperti API publik pada umumnya, layanan ini juga memiliki dokumentasi berbasis situs web. Pengguna juga dapat berlangganan VIP dengan mengunjungi website untuk mendapatkan token VIP. Project ini juga sudah dicover dengan feature test.</p>
             
             <h4 class="font-semibold text-1xl text-dark mt-5 mb-3">Teknologi : <span class="font-medium text-base text-secondary">Laravel, PHP, MySQL, JQuery, Bootstrap, Snap-Midtrans, Laravel-FFMpeg/FFMprobe.</span></h4>
 
