--- a/index.html
+++ b/index.html
@@ -250,6 +250,7 @@
             <div class="w-full lg:w-2/3 lg:mx-auto">
             <div class="w-full mb-8 px-4">
                 <label for="name" class="text-base text-primary font-bold">Nama</label>
+                <input type="hidden" name="_captcha" value="false">
                 <input type="text" id="name" name="name" class="w-full bg-slate-200 text-dark p-3 rounded-md focus:outline-none focus:ring-primary focus:ring-1 focus:border-primary" required>
             </div>
             <div class="w-full mb-8 px-4">
