--- a/index.html
+++ b/index.html
@@ -188,6 +188,7 @@
 
        <div class="w-full px-4 flex flex-wrap justify-center xl:w-10/12 xl:mx-auto">
         <div class="mb-12 p-4 md:w-1/2" id="onime">
+            <h5 class="text-primary font-bold mb-3">Personal Project (Jun 2023 - Jul 2023)</h5>
             <div class="rounded-md shadow-md overflow-hidden relative">
                 <a target="_blank" href="https://github.com/RizkySix/onime"><img src="dist/img/portofolio/onime1.png" alt="" width="w-full" class="transition-transform transform hover:scale-105 filter "></a>
             </div>
@@ -198,6 +199,7 @@
 
         </div>
         <div class="mb-12 p-4 md:w-1/2" id="shalltear">
+            <h5 class="text-primary font-bold mb-3">College Final Project (Mei 2023 - Jun 2023)</h5>
             <div class="rounded-md shadow-md overflow-hidden">
                 <a target="_blank" href="https://github.com/RizkySix/shalltears"> <img src="dist/img/portofolio/shalltear1.png" alt="" width="w-full" class="transition-transform transform hover:scale-105 filter "></a>
                
@@ -209,6 +211,7 @@
 
         </div>
         <div class="mb-12 p-4 md:w-1/2" id="shoesclean">
+            <h5 class="text-primary font-bold mb-3">Freelance Project (Mar 2023)</h5>
             <div class="rounded-md shadow-md overflow-hidden">
                 <a target="_blank" href="https://github.com/RizkySix/shoes-clean"><img src="dist/img/portofolio/shoesclean1.png" alt="" width="w-full" class="transition-transform transform hover:scale-105 filter "></a>
             </div>
@@ -219,6 +222,7 @@
 
         </div>
         <div class="mb-12 p-4 md:w-1/2" id="bumdes">
+            <h5 class="text-primary font-bold mb-3">Freelance Project (Jan 2023 - Feb 2023)</h5>
             <div class="rounded-md shadow-md overflow-hidden">
                 <a target="_blank" href="https://github.com/RizkySix/aplikasi-bumdes">  <img src="dist/img/portofolio/bumdes1.png" alt="" width="w-full" class="transition-transform transform hover:scale-105 filter "></a>
             </div>
