new link changes

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
             <p class="font-medium text-base text-secondary">Sosial media clone yang ditujukan dan diguanakan saat ini oleh teman-teman dan circle saya. Anda dapat memposting gambar, membuat thread, mengirim udangan event, mengomentari dan menyukai post dan notifikasi untuk aktifitas post anda.</p>
             
             <h4 class="font-semibold text-1xl text-dark mt-5 mb-2 dark:text-white">Teknologi : <span class="font-medium text-base text-secondary">Laravel, PHP, MySQL, VueJs, Tailwind CSS, Domain email account.</span></h4>
-            <h4 class="font-semibold text-1xl text-dark mb-3 dark:text-white">Live Web : <a class="font-medium text-base text-secondary" href="https://shalltears.vercel.app/">https://shalltears.vercel.app</a></h4>
+            <h4 class="font-semibold text-1xl text-dark mb-3 dark:text-white">Live Web : <a class="font-medium text-base text-secondary" href="https://shalltears.netlify.app/">https://shalltears.netlify.app</a></h4>
 
         </div>
         <div class="mb-12 p-4 md:w-1/2" id="onime">
