--- a/index.html
+++ b/index.html
@@ -193,7 +193,20 @@
        </div>
 
        <div class="w-full px-4 flex flex-wrap justify-center xl:w-10/12 xl:mx-auto">
-        <div class="mb-12 p-4 md:w-1/2" id="shallters-sosmed">
+        <div class="mb-12 p-4 md:w-1/2" id="lavista-rental">
+            <h5 class="text-primary font-bold mb-3">Freelance Project (Oct 2023 - Nov 2023)</h5>
+            <div class="rounded-md shadow-md overflow-hidden relative">
+                <a target="_blank" href="https://github.com/RizkySix/ubud-motor"><img src="dist/img/portofolio/lavista.png" alt="" width="w-full" class="transition-transform transform hover:scale-105 filter "></a>
+            </div>
+            <h3 class="font-semibold text-xl text-dark mt-5 mb-3 dark:text-white " >Lavista Rental Bike</h3>
+            <p class="font-medium text-base text-secondary">Web App company profile, booking & perpanjangan sewa, dan dashboard admin untuk Lavista Rental Bike dengan menerapkan notifikasi melalui Email dan WhatsApp untuk aktifitas booking & sewa.</p>
+            
+            <h4 class="font-semibold text-1xl text-dark mt-5 mb-2 dark:text-white">Teknologi : <span class="font-medium text-base text-secondary">Laravel, PHP, MySQL, VueJs, Tailwind CSS, Flowbite UI.</span></h4>
+            <h4 class="font-semibold text-1xl text-dark mb-3 dark:text-white">Live Web : <a class="font-medium text-base text-blue-500 hover:text-blue-500" href="https://clientlavista.shalltears.cloud/">https://clientlavista.shalltears.cloud/</a></h4>
+
+        </div>
+
+        <div class="mb-12 p-4 md:w-1/2" id="shalltears-sosmed">
             <h5 class="text-primary font-bold mb-3">Personal Project (Aug 2023 - Sept 2023)</h5>
             <div class="rounded-md shadow-md overflow-hidden relative">
                 <a target="_blank" href="https://github.com/RizkySix/ShalltearsApp-Backend"><img src="dist/img/portofolio/shalltear-sosmed.png" alt="" width="w-full" class="transition-transform transform hover:scale-105 filter "></a>
@@ -202,7 +215,7 @@
             <p class="font-medium text-base text-secondary">Sosial media clone yang ditujukan dan diguanakan saat ini oleh teman-teman dan circle saya. Anda dapat memposting gambar, membuat thread, mengirim udangan event, mengomentari dan menyukai post dan notifikasi untuk aktifitas post anda.</p>
             
             <h4 class="font-semibold text-1xl text-dark mt-5 mb-2 dark:text-white">Teknologi : <span class="font-medium text-base text-secondary">Laravel, PHP, MySQL, VueJs, Tailwind CSS, Domain email account.</span></h4>
-            <h4 class="font-semibold text-1xl text-dark mb-3 dark:text-white">Live Web : <a class="font-medium text-base text-secondary" href="https://shalltears.netlify.app/">https://shalltears.netlify.app</a></h4>
+            <h4 class="font-semibold text-1xl text-dark mb-3 dark:text-white">Live Web : <a class="font-medium text-base text-blue-500 hover:text-blue-500" href="https://shalltears.netlify.app/">https://shalltears.netlify.app</a></h4>
 
         </div>
         <div class="mb-12 p-4 md:w-1/2" id="onime">
@@ -304,6 +317,12 @@
             <div class="w-full px-4 mb-12 md:w-1/3">
                 <h3 class="font-semibold text-xl text-white mb-5">Project</h3>
                 <ul class="text-slate-300">
+                    <li>
+                        <a href="#lavista-rental" class="inline-block text-base hover:text-primary mb-3">Lavista Rental Bike</a>
+                    </li>
+                    <li>
+                        <a href="#shalltears-sosmed" class="inline-block text-base hover:text-primary mb-3">Shalltears Sosmed Clone</a>
+                    </li>
                     <li>
                         <a href="#onime" class="inline-block text-base hover:text-primary mb-3">Onime (Public API SERVICE)</a>
                     </li>
